@@ -1,11 +1,11 @@
 {
-  "count": 10,
-  "uniques": 7,
+  "count": 5,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-08-12T00:00:00Z",
-      "count": 6,
-      "uniques": 5
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-08-18T00:00:00Z",
